--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "c": "tsc",
+    "lint": "eslint ",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,6 +20,7 @@
     "redux": "^5.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -26,12 +28,17 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-import": "^2.31.0",
     "postcss": "^8.5.1",
     "sass": "^1.72.0",
     "tailwindcss": "^4.0.0",
+    "globals": "^15.11.0",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.11.0",
     "vite": "^5.2.0"
   }
 }
